--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "morgan": "1.2.2",
     "npm": "2.14.4",
     "path-extra": "0.2.1",
-    "pouchdb": "lesion/pouchdb",
+    "pouchdb": "lesion/pouchdb#arm64",
     "printit": "0.1.5",
     "request-json-light": "0.5.6",
     "symbolsjs": "1.0.0"
